--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
+    "react-datepicker": "^6.0.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
   }
